[metadata]
name        = MoonlightDB
version     = 1.2
description = Moonlight is a lightweight JSON-database for Python.
url         = https://github.com/De4oult/Moonlight
license     = MIT License
keywords    = python, cli, package, json, database, web, interface, async, python3, python3.12, database-management, webinterface, moonlight

author = de4oult
author_email = kayra.dist@gmail.com

long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires  = >= 3.12
install_requires =
    colorama
    filelock
    sanic
    sanic_cors
    click
    pick
    InquirerPy
    loguru
    rich

packages = Moonlight
zip_safe = False

[options.entry_points]
console_scripts =
    moonlight = Moonlight.cli:cli